rails awesome garage

--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -1,1 +1,7 @@
-<h1>List of Cars</h1>
+<h1>List of all Cars</h1>
+
+<% @cars.each do |car| %>
+    <%= car.brand %>
+    <%= car.model %>
+    <hr>
+<% end %>
